--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,9 +6,13 @@
 
 	<body>
 		<script src="/socket.io/socket.io.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/phaser@3.53.1/dist/phaser.min.js"></script>
 		<script src="js/module.js"></script>
 		<script src="js/shared/sync/events.js"></script>
+		<script src="js/shared/game/gameObjectTypes.js"></script>
+		<script src="js/shared/game/gameObject.js"></script>
+		<script src="js/shared/game/gameState.js"></script>
+		<script src="js/sync/updateHandler.js"></script>
 		<script src="js/sync/clientSync.js"></script>
 		<script src="js/game.js"></script>
 	</body>
