--- a/app/public/game.html
+++ b/app/public/game.html
@@ -94,10 +94,12 @@
 		<script src="js/module.js"></script>
 		<script src="js/shared/sync/events.js"></script>
 		<script src="js/shared/game/gameObjectTypes.js"></script>
+		<script src="js/shared/game/gameObjectShapes.js"></script>
 		<script src="js/shared/game/gameObject.js"></script>
 		<script src="js/shared/game/gameState.js"></script>
 		<script src="js/sync/updateHandler.js"></script>
 		<script src="js/sync/clientSync.js"></script>
+		<script src="js/levelInitializer.js"></script>
 		<script src="js/game.js"></script>
 	</body>
 </html>
