feat: :sparkles: adds game loop synchronisation

--- a/app/public/game.html
+++ b/app/public/game.html
@@ -97,6 +97,7 @@
 		<script src="js/shared/game/gameObjectShapes.js"></script>
 		<script src="js/shared/game/gameObject.js"></script>
 		<script src="js/shared/game/gameState.js"></script>
+		<script src="js/shared/physics/physicsUpdater.js"></script>
 		<script src="js/sync/updateHandler.js"></script>
 		<script src="js/sync/clientSync.js"></script>
 		<script src="js/levelInitializer.js"></script>
