--- a/app/public/game.html
+++ b/app/public/game.html
@@ -42,6 +42,7 @@
 					<a class="navbar-item" href="index.html"> Home </a>
 
 					<a class="navbar-item"> Game </a>
+					<a class="navbar-item" href="credits.html"> Credits </a>
 
 					<div class="navbar-item has-dropdown is-hoverable">
 						<a class="navbar-link"> More </a>
