--- a/app/public/game.html
+++ b/app/public/game.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>StudentRun</title>
-		<link rel="stylesheet" href="styles/global.css" />
+		<link rel="stylesheet" href="build/global.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -90,18 +90,6 @@
 			</div>
 		</nav>
 
-		<script src="/socket.io/socket.io.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/phaser@3.53.1/dist/phaser.min.js"></script>
-		<script src="js/module.js"></script>
-		<script src="js/shared/sync/events.js"></script>
-		<script src="js/shared/game/gameObjectTypes.js"></script>
-		<script src="js/shared/game/gameObjectShapes.js"></script>
-		<script src="js/shared/game/gameObject.js"></script>
-		<script src="js/shared/game/gameState.js"></script>
-		<script src="js/shared/physics/physicsUpdater.js"></script>
-		<script src="js/sync/updateHandler.js"></script>
-		<script src="js/sync/clientSync.js"></script>
-		<script src="js/levelInitializer.js"></script>
-		<script src="js/game.js"></script>
+		<script src="build/bundle.js"></script>
 	</body>
 </html>
