--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>StudentRun</title>
-		<link rel="stylesheet" href="styles/global.css" />
+		<link rel="stylesheet" href="build/global.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
