* feat: :sparkles: multiple players can join

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -64,7 +64,7 @@
 					<div class="navbar-item">
 						<div class="field is-grouped">
 							<p class="control">
-								<a href="game.html">
+								<a href="join.html">
 									<button class="button is-danger">
 										<span class="icon is-small">
 											<i class="fas fa-gamepad"></i>
@@ -107,7 +107,7 @@
 							Get ready for action packed races with your friends
 							in StudentRun!
 						</h1>
-						<a href="game.html">
+						<a href="join.html">
 							<button class="button is-danger is-large">
 								<span class="icon is-small">
 									<i class="fas fa-play"></i>
