--- a/app/public/join.html
+++ b/app/public/join.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Join</title>
-</head>
-<body>
-<button id="joinGame">Join Game</button>
-<button id="startGame">Start Game</button>
-<div id="players"></div>
-<script src="/socket.io/socket.io.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-        crossorigin="anonymous"></script>
-<script src="js/shared/sync/events.js"></script>
-<script src="js/sync/clientSync.js"></script>
-<script src="js/helper/tableGenerator.js"></script>
-<script src="js/join.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Join</title>
+	</head>
+	<body>
+		<button id="joinGame">Join Game</button>
+		<button id="startGame">Start Game</button>
+		<div id="players"></div>
+		<script src="build/join-bundle.js"></script>
+	</body>
 </html>
