--- a/app/public/credits.html
+++ b/app/public/credits.html
@@ -1,13 +1,325 @@
-<!-- https://stackoverflow.com/questions/37770620/how-to-include-markdown-md-files-inside-html-files -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>StudentRun</title>
+		<link rel="stylesheet" href="build/global.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+			integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body class="has-navbar-fixed-top">
+		<nav
+			class="navbar is-fixed-top"
+			role="navigation"
+			aria-label="main navigation"
+		>
+			<div class="navbar-brand">
+				<a class="navbar-item" href="index.html">
+					<img src="assets/logo.png" alt="studentrun-logo" />
+				</a>
 
-<!-- Lightweight client-side loader that feature-detects and load polyfills only when necessary -->
-<script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
+				<a
+					role="button"
+					class="navbar-burger"
+					aria-label="menu"
+					aria-expanded="false"
+					data-target="navbarBasicExample"
+				>
+					<span aria-hidden="true"></span>
+					<span aria-hidden="true"></span>
+					<span aria-hidden="true"></span>
+				</a>
+			</div>
 
-<!-- Load the element definition -->
-<script
-	type="module"
-	src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"
-></script>
+			<div id="navbarBasicExample" class="navbar-menu">
+				<div class="navbar-start">
+					<a class="navbar-item" href="index.html"> Home </a>
 
-<!-- Simply set the `src` attribute to your MD file and win -->
-<zero-md src="assets/credit.md"></zero-md>
+					<a class="navbar-item"> Game </a>
+
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link"> More </a>
+
+						<div class="navbar-dropdown">
+							<a class="navbar-item"> About </a>
+							<a class="navbar-item"> Contact </a>
+							<a class="navbar-item" href="credits.html">
+								Credits
+							</a>
+							<hr class="navbar-divider" />
+							<a
+								class="navbar-item"
+								href="https://github.zhaw.ch/PathFinder/StudentRun/issues"
+							>
+								Report an issue
+							</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="navbar-end">
+					<div class="navbar-item">
+						<div class="field is-grouped">
+							<p class="control">
+								<a href="join.html">
+									<button class="button is-danger">
+										<span class="icon is-small">
+											<i
+												class="fas fa-gamepad"
+												aria-hidden="true"
+											></i>
+										</span>
+										<span class="is-uppercase">Play</span>
+									</button></a
+								>
+							</p>
+							<p class="control">
+								<a
+									href="https://github.zhaw.ch/PathFinder/StudentRun"
+								>
+									<button class="button is-light">
+										<span class="icon is-small">
+											<i
+												class="fab fa-github"
+												aria-hidden="true"
+											></i>
+										</span></button
+								></a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</nav>
+
+		<div class="columns">
+			<div class="column is-three-fifths is-offset-one-fifth">
+				<h1 class="title">Credits</h1>
+				<div id="description" class="content">
+					<p>
+						Some of the mentioned images beneath have been modified
+						to better suit our needs. Theses modified images are
+						released under the same license as the original version.
+					</p>
+					<p>
+						If you are the creator of one or more of these images
+						and feel that we used your work in an inappropriate way,
+						please open an issue on the project page on GitHub. We
+						will as soon as possible either adjust the credits or
+						remove the corresponding image from our project.
+					</p>
+				</div>
+				<table class="table" aria-describedby="description">
+					<thead>
+						<tr>
+							<th scope="col">Filename(s)</th>
+							<th scope="col">Original Creator</th>
+							<th scope="col">License of original File</th>
+							<th scope="col">
+								Title &amp; Link to original File
+							</th>
+							<th scope="col">Copyright/Attribution Notice</th>
+							<th scope="col">Modifications</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>flag.[png|svg]</td>
+							<td>cptx032</td>
+							<td>
+								<a
+									href="https://creativecommons.org/publicdomain/zero/1.0/"
+									>CC0 1.0 Universal (CC0 1.0) Public Domain
+									Dedication</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://opengameart.org/content/stencil-animated-flag"
+									>Stencil animated flag</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								<ul>
+									<li>Vectorized</li>
+									<li>Repositioned corners</li>
+									<li>Rounded corners</li>
+									<li>Changed flag color to red</li>
+									<li>Added color gradient to post</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>happy.[png|svg]</td>
+							<td>The GNOME Project / Adwaita Icon Theme</td>
+							<td>
+								<a
+									href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+									>GNU General Public License</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://gitlab.gnome.org/GNOME/adwaita-icon-theme/-/blob/master/src/fullcolor/legacy/faces-1.svg"
+									>faces-1.svg</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								<ul>
+									<li>Removed other faces</li>
+									<li>Removed some shading</li>
+									<li>Added side view</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>hat.[png|svg]</td>
+							<td>Clker-Free-Vector-Images</td>
+							<td>
+								<a
+									href="https://creativecommons.org/publicdomain/zero/1.0/"
+									>CC0 1.0 Universal (CC0 1.0) Public Domain
+									Dedication</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://pixabay.com/vectors/hat-black-fedora-stylish-headgear-311702/"
+									>Hat-311702 960 720.png</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								<ul>
+									<li>Vectorized</li>
+									<li>Added sprained variant</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>tile_map.png</td>
+							<td>mr_eze</td>
+							<td>
+								<a
+									href="https://creativecommons.org/publicdomain/zero/1.0/"
+									>CC0 1.0 Universal (CC0 1.0) Public Domain
+									Dedication</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://opengameart.org/content/platformer-tiles-7"
+									>Platformer Tiles</a
+								>
+							</td>
+							<td>-</td>
+							<td>None</td>
+						</tr>
+						<tr>
+							<td>decorations.png</td>
+							<td>mr_eze</td>
+							<td>
+								<a
+									href="https://creativecommons.org/publicdomain/zero/1.0/"
+									>CC0 1.0 Universal (CC0 1.0) Public Domain
+									Dedication</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://opengameart.org/content/platformer-tiles-7"
+									>Platformer Tiles</a
+								>
+							</td>
+							<td>-</td>
+							<td>None</td>
+						</tr>
+						<tr>
+							<td>debian.[png|svg]</td>
+							<td>Software in the Public Interest, Inc.</td>
+							<td>
+								<a
+									href="https://creativecommons.org/licenses/by-sa/3.0/"
+									>Creative Commons Attribution-ShareAlike 3.0
+									Unported License</a
+								>
+							</td>
+							<td>
+								<a href="https://www.debian.org/logos/#open-use"
+									>Debian-Logo zur freien Verwendung</a
+								>
+							</td>
+							<td>
+								Copyright (c) 1999 Software in the Public
+								Interest, Inc.
+							</td>
+							<td>
+								<ul>
+									<li>Added roteated variants</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>fish.[png|svg]</td>
+							<td>Psyk23</td>
+							<td>
+								<a
+									href="https://creativecommons.org/publicdomain/zero/1.0/"
+									>CC0 1.0 Universal (CC0 1.0) Public Domain
+									Dedication</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://opengameart.org/content/purple-fish-0"
+									>Purple Fish</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								<ul>
+									<li>Vectorized</li>
+									<li>Adjusted positioning</li>
+									<li>Made animation more noticeable</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>snowman.[png|svg]</td>
+							<td>pechvogel</td>
+							<td>
+								<a
+									href="https://creativecommons.org/licenses/by/3.0/"
+									>Attribution 3.0 Unported (CC BY 3.0)</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://opengameart.org/content/snowman-character"
+									>Snowman Character</a
+								>
+							</td>
+							<td>&quot;Free&quot;</td>
+							<td>
+								<ul>
+									<li>
+										Combined
+										<code>walk/00[0-6].png</code> with
+										<code>idle/000.png</code>
+									</li>
+								</ul>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</body>
+</html>
