--- a/app/public/index.html
+++ b/app/public/index.html
@@ -12,16 +12,15 @@
 			crossorigin="anonymous"
 		/>
 	</head>
-	<body>
-		<nav class="navbar" role="navigation" aria-label="main navigation">
+	<body class="has-navbar-fixed-top">
+		<nav
+			class="navbar is-fixed-top"
+			role="navigation"
+			aria-label="main navigation"
+		>
 			<div class="navbar-brand">
 				<a class="navbar-item" href="index.html">
-					<img
-						src="https://bulma.io/images/bulma-logo.png"
-						alt="bulma-logo"
-						width="112"
-						height="28"
-					/>
+					<img src="assets/logo.png" alt="studentrun-logo" />
 				</a>
 
 				<a
@@ -49,6 +48,9 @@
 						<div class="navbar-dropdown">
 							<a class="navbar-item"> About </a>
 							<a class="navbar-item"> Contact </a>
+							<a class="navbar-item" href="credits.html">
+								Credits
+							</a>
 							<hr class="navbar-divider" />
 							<a
 								class="navbar-item"
@@ -67,7 +69,10 @@
 								<a href="join.html">
 									<button class="button is-danger">
 										<span class="icon is-small">
-											<i class="fas fa-gamepad"></i>
+											<i
+												class="fas fa-gamepad"
+												aria-hidden="true"
+											></i>
 										</span>
 										<span class="is-uppercase">Play</span>
 									</button></a
@@ -79,7 +84,10 @@
 								>
 									<button class="button is-light">
 										<span class="icon is-small">
-											<i class="fab fa-github"></i>
+											<i
+												class="fab fa-github"
+												aria-hidden="true"
+											></i>
 										</span></button
 								></a>
 							</p>
@@ -89,38 +97,35 @@
 			</div>
 		</nav>
 
-		<div
-			style="
-				background-image: url('https://www.business-punk.com/app/uploads/2021/01/Bildschirmfoto-2021-01-12-um-12.43.27-2340x1208-c-default.jpg');
-				background-repeat: no-repeat;
-				background-size: cover;
-				background-position: right;
-			"
-		>
-			<section class="hero is-large is-transparent">
-				<div class="hero-body">
-					<div class="column is-3 is-offset-3">
-						<h1 class="title is-size-1 has-text-white">
-							StudentRun
-						</h1>
-						<h1 class="subtitle has-text-white">
-							Get ready for action packed races with your friends
-							in StudentRun!
-						</h1>
-						<a href="join.html">
-							<button class="button is-danger is-large">
-								<span class="icon is-small">
-									<i class="fas fa-play"></i>
-								</span>
-								<span class="is-uppercase"
-									>Play now for free</span
-								>
-							</button></a
-						>
-					</div>
+		<div class="video-container hero is-large is-transparent">
+			<video
+				src="https://css-tricks-post-videos.s3.us-east-1.amazonaws.com/708209935.mp4"
+				autoplay
+				loop
+				playsinline
+				muted
+			></video>
+			<div class="video-caption hero-body">
+				<div class="column is-5 is-offset-2">
+					<img src="assets/logo.png" alt="studentrun-logo" />
 				</div>
-			</section>
+				<div class="column is-3 is-offset-3">
+					<h1 class="subtitle has-text-white">
+						Get ready for action packed races with your friends in
+						StudentRun!
+					</h1>
+					<a href="join.html">
+						<button class="button is-danger is-large">
+							<span class="icon is-small">
+								<i class="fas fa-play" aria-hidden="true"></i>
+							</span>
+							<span class="is-uppercase">Play now for free</span>
+						</button></a
+					>
+				</div>
+			</div>
 		</div>
+
 		<div class="tile is-ancestor mt-4">
 			<div class="tile is-vertical is-8">
 				<div class="tile">
