feat: :children_crossing: improved game flow (#147)
* test: :white_check_mark: test & typo fix

* feat: :children_crossing: if game is running disable player joining

* feat: :children_crossing: improved game flow

* fix test

--- a/app/public/game.html
+++ b/app/public/game.html
@@ -105,6 +105,7 @@
 				<!-- Phaser will be displayed inside this div -->
 			</div>
 		</div>
+		<div id="scoreBoard"></div>
 
 		<script src="build/game-bundle.js"></script>
 	</body>
