--- a/app/public/join.html
+++ b/app/public/join.html
@@ -5,6 +5,7 @@
 		<title>Join</title>
 	</head>
 	<body>
+		<p id="gameStatus"></p>
 		<button id="joinGame">Join Game</button>
 		<button id="startGame">Start Game</button>
 		<div id="players"></div>
