--- a/app/public/credits.html
+++ b/app/public/credits.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>StudentRun</title>
+		<title>StudentRun - Credits</title>
+		<link rel="icon" type="image/png" href="assets/icon.png" />
 		<link rel="stylesheet" href="build/global.css" />
 		<link
 			rel="stylesheet"
