--- a/app/public/game.html
+++ b/app/public/game.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>StudentRun</title>
+		<title>StudentRun - Game</title>
+		<link rel="icon" type="image/png" href="assets/icon.png" />
 		<link rel="stylesheet" href="build/global.css" />
 		<link
 			rel="stylesheet"
@@ -98,14 +99,13 @@
 		</nav>
 
 		<div class="columns">
-			<div
-				id="student-run"
-				class="column is-three-fifths is-offset-one-fifth"
-			>
-				<!-- Phaser will be displayed inside this div -->
+			<div class="column is-three-fifths is-offset-one-fifth">
+				<div id="student-run" class="block">
+					<!-- Phaser will be displayed inside this div -->
+				</div>
+				<div id="scoreBoard" class="block"></div>
 			</div>
 		</div>
-		<div id="scoreBoard"></div>
 
 		<script src="build/game-bundle.js"></script>
 	</body>
