refactor: :lipstick: updated and improved webpage (#178)
moved assets, added footer to pages, added features and contact page and other minor improvements

--- a/app/public/credits.html
+++ b/app/public/credits.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>StudentRun - Credits</title>
-		<link rel="icon" type="image/png" href="assets/icon.png" />
+		<link rel="icon" type="image/png" href="assets/webpage/icon.png" />
 		<link rel="stylesheet" href="build/global.css" />
 		<link
 			rel="stylesheet"
@@ -21,7 +21,7 @@
 		>
 			<div class="navbar-brand">
 				<a class="navbar-item" href="index.html">
-					<img src="assets/logo.png" alt="studentrun-logo" />
+					<img src="assets/webpage/logo.png" alt="studentrun-logo" />
 				</a>
 
 				<a
@@ -41,14 +41,16 @@
 				<div class="navbar-start">
 					<a class="navbar-item" href="index.html"> Home </a>
 
-					<a class="navbar-item"> Game </a>
+					<a class="navbar-item" href="features.html"> Game </a>
 
 					<div class="navbar-item has-dropdown is-hoverable">
 						<a class="navbar-link"> More </a>
 
 						<div class="navbar-dropdown">
 							<a class="navbar-item"> About </a>
-							<a class="navbar-item"> Contact </a>
+							<a class="navbar-item" href="contact.html">
+								Contact
+							</a>
 							<a class="navbar-item" href="credits.html">
 								Credits
 							</a>
@@ -322,5 +324,11 @@
 				</table>
 			</div>
 		</div>
+
+		<footer class="footer has-background-white">
+			<div class="content has-text-centered">
+				<p>Created with ❤️&nbsp; by PathFinder.</p>
+			</div>
+		</footer>
 	</body>
 </html>
