--- a/app/public/contact.html
+++ b/app/public/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>StudentRun - Join</title>
+		<title>StudentRun - Contact</title>
 		<link rel="icon" type="image/png" href="assets/webpage/icon.png" />
 		<link rel="stylesheet" href="build/global.css" />
 		<link
@@ -103,52 +103,80 @@
 
 		<div class="columns">
 			<div class="column is-three-fifths is-offset-one-fifth">
-				<h1 class="title">Game Lobby</h1>
-				<article class="message">
-					<div class="message-header">
-						<p>Game Status:</p>
-					</div>
-					<div id="gameStatus" class="message-body">
-						<!-- Game Status will be displayed inside this div -->
-					</div>
-				</article>
-				<div class="buttons">
-					<button id="joinGame" class="button is-success">
-						Join Game
-					</button>
-					<button id="startGame" class="button is-info">
-						Start Game
-					</button>
-				</div>
-				<div class="columns">
-					<div class="column is-two-thirds">
-						<div id="numberOfPlayers" class="subtitle"></div>
-						<div id="players" class="block">
-							<!-- List of joined players will be displayed inside this div -->
-						</div>
-					</div>
-					<div class="column is-one-third">
-						<h1 class="title">🏁 Race</h1>
-						<h1 class="subtitle mb-0">
-							Get to the finish line first to win!
-						</h1>
-						<div class="level-preview-image">
-							<figure class="image is-3by1">
-								<img
-									src="assets/webpage/icon-green-hills.png"
-									alt="Preview of level Green Hills"
+				<h1 class="title">Contact Us</h1>
+				<div class="container my-5 mt-5 mx-5 px-5">
+					<form action="" method="post">
+						<div class="field">
+							<label
+								for="name"
+								class="label is-size-4 has-text-weight-light"
+							></label>
+							<div class="control has-icons-left">
+								<input
+									type="text"
+									name="name"
+									id="name"
+									class="input"
+									placeholder="Name"
+									autofocus
 								/>
-							</figure>
-							<div class="level-preview-image-overlay">
-								<p class="title">Green Hills</p>
+								<span class="icon is-left">
+									<i
+										class="fa fa-user"
+										aria-hidden="true"
+									></i>
+								</span>
 							</div>
 						</div>
-						<p>Race on Green Hills</p>
-					</div>
+						<div class="field">
+							<label
+								for="email"
+								class="label is-size-4 has-text-weight-light"
+							></label>
+							<div class="control has-icons-left">
+								<input
+									type="email"
+									name="email"
+									id="email"
+									class="input"
+									placeholder="Email"
+								/>
+								<span class="icon is-left">
+									<i
+										class="fa fa-envelope"
+										aria-hidden="true"
+									></i>
+								</span>
+							</div>
+						</div>
+						<div class="field">
+							<label
+								for="message"
+								class="label is-size-4 has-text-weight-light"
+							></label>
+							<textarea
+								name="message"
+								id="message"
+								rows="5"
+								class="textarea is-medium"
+								placeholder="Message"
+							></textarea>
+						</div>
+						<button
+							type="submit"
+							class="button is-success is-size-5"
+						>
+							Submit
+						</button>
+					</form>
 				</div>
 			</div>
 		</div>
 
-		<script src="build/join-bundle.js"></script>
+		<footer class="footer has-background-white">
+			<div class="content has-text-centered">
+				<p>Created with ❤️&nbsp; by PathFinder.</p>
+			</div>
+		</footer>
 	</body>
 </html>
