--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>StudentRun - Home</title>
-		<link rel="icon" type="image/png" href="assets/icon.png" />
+		<link rel="icon" type="image/png" href="assets/webpage/icon.png" />
 		<link rel="stylesheet" href="build/global.css" />
 		<link
 			rel="stylesheet"
@@ -21,7 +21,7 @@
 		>
 			<div class="navbar-brand">
 				<a class="navbar-item" href="index.html">
-					<img src="assets/logo.png" alt="studentrun-logo" />
+					<img src="assets/webpage/logo.png" alt="studentrun-logo" />
 				</a>
 
 				<a
@@ -41,14 +41,16 @@
 				<div class="navbar-start">
 					<a class="navbar-item" href="index.html"> Home </a>
 
-					<a class="navbar-item"> Game </a>
+					<a class="navbar-item" href="features.html"> Game </a>
 
 					<div class="navbar-item has-dropdown is-hoverable">
 						<a class="navbar-link"> More </a>
 
 						<div class="navbar-dropdown">
 							<a class="navbar-item"> About </a>
-							<a class="navbar-item"> Contact </a>
+							<a class="navbar-item" href="contact.html">
+								Contact
+							</a>
 							<a class="navbar-item" href="credits.html">
 								Credits
 							</a>
@@ -76,8 +78,8 @@
 											></i>
 										</span>
 										<span class="is-uppercase">Play</span>
-									</button></a
-								>
+									</button>
+								</a>
 							</p>
 							<p class="control">
 								<a
@@ -89,8 +91,9 @@
 												class="fab fa-github"
 												aria-hidden="true"
 											></i>
-										</span></button
-								></a>
+										</span>
+									</button>
+								</a>
 							</p>
 						</div>
 					</div>
@@ -100,7 +103,7 @@
 
 		<div class="video-container hero is-large is-transparent">
 			<video
-				src="https://css-tricks-post-videos.s3.us-east-1.amazonaws.com/708209935.mp4"
+				src="assets/webpage/gameplay.mov"
 				autoplay
 				loop
 				playsinline
@@ -108,7 +111,7 @@
 			></video>
 			<div class="video-caption hero-body">
 				<div class="column is-5 is-offset-2">
-					<img src="assets/logo.png" alt="studentrun-logo" />
+					<img src="assets/webpage/logo.png" alt="studentrun-logo" />
 				</div>
 				<div class="column is-3 is-offset-3">
 					<h1 class="subtitle has-text-white">
@@ -121,8 +124,8 @@
 								<i class="fas fa-play" aria-hidden="true"></i>
 							</span>
 							<span class="is-uppercase">Play now for free</span>
-						</button></a
-					>
+						</button>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -134,32 +137,40 @@
 						<article class="tile is-child notification is-primary">
 							<p class="title">Over 5+ different levels</p>
 							<p class="subtitle">
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua.
+								More than 5 playable levels to choose from!
 							</p>
+							<figure class="image">
+								<img
+									src="assets/webpage/levels.png"
+									alt="Levels in StudentRun"
+								/>
+							</figure>
 						</article>
 						<article class="tile is-child notification is-warning">
 							<p class="title">More than 10 characters</p>
 							<p class="subtitle">
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua.
+								Choose one of many possible characters in
+								StudentRun!
 							</p>
+							<figure class="image">
+								<img
+									src="assets/webpage/characters.png"
+									alt="Characters in StudentRun"
+								/>
+							</figure>
 						</article>
 					</div>
 					<div class="tile is-parent">
 						<article class="tile is-child notification is-info">
 							<p class="title">Lots of fun items</p>
 							<p class="subtitle">
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua.
+								Win the upper hand by using one of the many
+								items scattered around the level!
 							</p>
-							<figure class="image is-4by3">
+							<figure class="image">
 								<img
-									src="https://bulma.io/images/placeholders/640x480.png"
-									alt="placeholder-image"
+									src="assets/webpage/items.png"
+									alt="Items in StudentRun"
 								/>
 							</figure>
 						</article>
@@ -167,11 +178,9 @@
 				</div>
 				<div class="tile is-parent">
 					<article class="tile is-child notification is-danger">
-						<p class="title">With up to 4 players</p>
+						<p class="title">Free to play</p>
 						<p class="subtitle">
-							Lorem ipsum dolor sit amet, consectetur adipiscing
-							elit, sed do eiusmod tempor incididunt ut labore et
-							dolore magna aliqua.
+							The game is completely free to play!
 						</p>
 					</article>
 				</div>
@@ -179,15 +188,26 @@
 			<div class="tile is-parent">
 				<article class="tile is-child notification is-success">
 					<div class="content">
-						<p class="title">Free to play</p>
+						<p class="title">Up to 8 players</p>
 						<p class="subtitle">
-							Lorem ipsum dolor sit amet, consectetur adipiscing
-							elit, sed do eiusmod tempor incididunt ut labore et
-							dolore magna aliqua.
+							Play the game with up to 7 of your friends, for a
+							total of 8 players!
 						</p>
+						<figure class="image">
+							<img
+								src="assets/webpage/lobby.png"
+								alt="Game Lobby in StudentRun"
+							/>
+						</figure>
 					</div>
 				</article>
 			</div>
 		</div>
+
+		<footer class="footer has-background-white">
+			<div class="content has-text-centered">
+				<p>Created with ❤️&nbsp; by PathFinder.</p>
+			</div>
+		</footer>
 	</body>
 </html>
