--- a/app/public/credits.html
+++ b/app/public/credits.html
@@ -320,6 +320,94 @@
 								</ul>
 							</td>
 						</tr>
+						<tr>
+							<td>battery.[png|svg]</td>
+							<td>The GNOME Project / Adwaita Icon Theme</td>
+							<td>
+								<a
+									href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+									>GNU General Public License</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://gitlab.gnome.org/GNOME/adwaita-icon-theme/-/blob/master/src/fullcolor/legacy/batteries.svg"
+									>Batteries</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								<ul>
+									<li>
+										Removed other batteries and Objects
+									</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>lightning.[png|svg]</td>
+							<td>The GNOME Project / Adwaita Icon Theme</td>
+							<td>
+								<a
+									href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+									>GNU General Public License</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://gitlab.gnome.org/GNOME/adwaita-icon-theme/-/blob/master/src/fullcolor/legacy/batteries.svg"
+									>Batteries</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								<ul>
+									<li>
+										Removed everything except the lightning
+									</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>dude.png</td>
+							<td>Phaser</td>
+							<td>
+								<a
+									href="https://mit-license.org"
+									>MIT License</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://github.com/photonstorm/phaser3-examples/blob/master/public/assets/sprites/dude.png"
+									>dude.png</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								None
+							</td>
+						</tr>
+						<tr>
+							<td>star.png</td>
+							<td>Phaser</td>
+							<td>
+								<a
+									href="https://mit-license.org"
+									>MIT License</a
+								>
+							</td>
+							<td>
+								<a
+									href="https://github.com/photonstorm/phaser3-examples/blob/master/public/src/games/firstgame/assets/star.png"
+									>star.png</a
+								>
+							</td>
+							<td>-</td>
+							<td>
+								None
+							</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
